fix aeron config