@@ -6,6 +6,16 @@ dependencies {
 
 application {
     mainClass = 'io.github.andrewwormald.aerontoys.toyfactory.ClusterNode'
+    applicationDefaultJvmArgs = [
+        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+        '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
+        '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        '-Xmx1G',
+        '-XX:+UseG1GC',
+        '-Daeron.dir=build/aeron',
+        '-Dlogback.configurationFile=src/main/resources/logback.xml'
+    ]
 }
 
 jar {
